fixed padding issue on mobile devices

--- a/modified.css
+++ b/modified.css
@@ -116,4 +116,7 @@
   .before-header-right .simple-social-icons {
     display: none;
   }
+  .page-template-services-page .bumper, .single .bumper {
+    display: none;
+  }
 }
